Implement bearer token using Firebase admin
