# src/main/kotlin/dev/xavierc/herbarium/api/apis/ActuatorsApi.kt
@@ -1,14 +1,14 @@
 /**
-* Herbarium API
-* No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-*
-* The version of the OpenAPI document: 1.0.0
-* 
-*
-* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-* https://openapi-generator.tech
-* Do not edit the class manually.
-*/
+ * Herbarium API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
 package dev.xavierc.herbarium.api.apis
 
 import com.google.gson.Gson
@@ -17,6 +17,7 @@ import io.ktor.auth.*
 import io.ktor.http.*
 import io.ktor.response.*
 import dev.xavierc.herbarium.api.Paths
+import dev.xavierc.herbarium.api.infrastructure.FirebasePrincipal
 import io.ktor.locations.*
 import io.ktor.routing.*
 
@@ -25,11 +26,11 @@ fun Route.ActuatorsApi() {
     val gson = Gson()
     val empty = mutableMapOf<String, Any?>()
 
-    authenticate("oauth") {
-    post<Paths.postActuatorState> {
-        val principal = call.authentication.principal<OAuthAccessTokenResponse>()!!
-        
-        call.respond(HttpStatusCode.NotImplemented)
-    }
+    authenticate("firebase") {
+        post<Paths.postActuatorState> {
+            val userUuid = call.authentication.principal<FirebasePrincipal>()!!.userUuid
+
+            call.respond(HttpStatusCode.NotImplemented)
+        }
     }
 }
